update from Andy

--- a/cidr2020/gongshow2020/gongshow.html
+++ b/cidr2020/gongshow2020/gongshow.html
@@ -89,6 +89,10 @@
 <table class="accepted">
 
 <tr>
+    <td class="paper-url"><a href="gongshow/abstracts/cidr2020_abstract1.pdf" title="Cross-Blockchain Transactions"><img src="gongshow/img/paper1.png" /></a></td>
+    <td class="paper-info"><b><a href="gongshow/abstracts/cidr2020_abstract1.pdf">Cross-Blockchain Transactions</a></b><BR/>Tawose Olamide Timothy (<em>University of Nevada, Reno</em>)</td>
+</tr>
+<tr>
     <td class="paper-url"><a href="gongshow/abstracts/cidr2020_abstract23.pdf" title="Automated Paraphrasing for Pure Natural Language Interaction with Databases"><img src="gongshow/img/paper23.png" /></a></td>
     <td class="paper-info"><b><a href="gongshow/abstracts/cidr2020_abstract23.pdf">Automated Paraphrasing for Pure Natural Language Interaction with Databases</a></b><BR/>Christopher Baik (<em>University of Michigan</em>)</td>
 </tr>
@@ -114,7 +118,7 @@
 </tr>
 <tr>
     <td class="paper-url"><a href="gongshow/abstracts/cidr2020_abstract74.pdf" title="Pixels: Multiversion Wide Table Store for Data Lakes"><img src="gongshow/img/paper74.png" /></a></td>
-    <td class="paper-info"><b><a href="gongshow/abstracts/cidr2020_abstract74.pdf">Pixels: Multiversion Wide Table Store for Data Lakes</a></b><BR/>Haoqiong Bian (<em>Tencent</em>)</td>
+    <td class="paper-info"><b><a href="gongshow/abstracts/cidr2020_abstract74.pdf">Pixels: Multiversion Wide Table Store for Data Lakes</a></b><BR/>Haoqiong Bian (<em>Unaffiliated</em>)</td>
 </tr>
 <tr>
     <td class="paper-url"><img src="gongshow/img/missing.png" /></td>
