fixed keynote formatting

--- a/cidr2020/keynotespeakers.html
+++ b/cidr2020/keynotespeakers.html
@@ -80,7 +80,7 @@ normal'><span style='font-size:16.0pt'>&nbsp;</span></p>
 
 <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
 normal'><b><span style='font-size:16.0pt'>Title:</span></b><span
-style='color:black'><br>
+style='font-size:11.5pt;line-height:115%;color:#333333'><br>
 Big Data, AI and Banks - Uses Cases and Possibilities on the Ground<br>
 <br>
 </span><b><span style='font-size:16.0pt;color:black'>Abstract:</span></b><span
@@ -136,14 +136,14 @@ style='font-size:16.0pt;line-height:115%;color:black'>&nbsp;</span></b></p>
 style='font-size:16.0pt;line-height:115%;color:black'>Abstract:</span></b></p>
 
 <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt'><span
-style='font-size:11.5pt;line-height:115%;color:#333333'>Enterprise applications
+style='color:black'>Enterprise applications
 such as Finance, Logistics, Supply Chaim Management or Customer Relationship
 Management are key stakeholders of database systems. In recent years they got
 much more attention in database community mainly cause of their scale and economic
 success. Data management systems like SAP HANA, Snowflake and others
 demonstrate the innovation need and potential in this area.  </span></p>
 
-<p class=MsoNormal><span style='font-size:11.5pt;line-height:115%;color:#333333'>This
+<p class=MsoNormal><span style='color:black'>This
 session recaps the success story of SAP HANA by focusing on the technology
 advances and general success criteria. The author will present his vision of
 the future role of data management in the enterprise stack in the light of the
@@ -155,7 +155,7 @@ management should get an even more crucial role.</span></p>
 style='font-size:16.0pt;line-height:115%;color:black'>Bio:</span></b></p>
 
 <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt'><span
-style='font-size:11.5pt;line-height:115%;color:#333333'>Franz Faerber has over
+style='color:black'>Franz Faerber has over
 25 years of experience in software research and development focusing on
 distributed systems, in-memory computing and data management. Joining SAP in
 1994 as a software developer, he has been one of the lead developers and
