added registration link

--- a/cidr2020/program.html
+++ b/cidr2020/program.html
@@ -456,7 +456,7 @@ Santander Corporate & Commercial Banking) </a></span>
 
 </div>
 
-<h2 id="schedule-heading">ADS Data & Drinks, "ADS meets CIDR" </h2>
+<h2 id="schedule-heading"><a href="https://www.meetup.com/nl-NL/Amsterdam-Data-Science/events/266828326">ADS Data & Drinks, "ADS meets CIDR"</a> </h2>
 <div class="schedule" aria-labelledby="schedule-heading">
 
     <h3 class="time-slot" style="grid-row: time-0730;">2:30pm</h3>
