fixed organization page

--- a/cidr2020/index.html
+++ b/cidr2020/index.html
@@ -73,6 +73,7 @@ document.write('</div>');
 		<ul class="avmenu">
 			<li><a href="index.html">Home</a></li>
 			<li><a href="cfp.html">Call For Papers</a></li>
+			<li><a href="officers.html">Officers</a></li>
 			<li><a href="org.html">Organization</a></li>
 			<li><a href="program.html">Program</a></li>
 <!--						<li><a href="keynotespeakers.html">Keynotes</a></li> -->
