--- a/cidr2020/org.html
+++ b/cidr2020/org.html
@@ -24,6 +24,7 @@
 		<ul class="avmenu">
 			<li><a href="index.html">Home</a></li>
 			<li><a href="cfp.html">Call For Papers</a></li>
+			<li><a href="officers.html">Officers</a></li>
 			<li><a href="org.html">Organization</a></li>
 			<li><a href="keynotespeakers.html">Keynotes</a></li>
 			<li><a href="program.html">Program</a></li>			
@@ -65,78 +66,49 @@
 	</div>
  
 
+<div id="contentwide">
+		<h2>CIDR Organization & Sponsors</h2>
+		<p>
+The CIDR conference is organized by volunteers from the data systems research community on behalf of the USA-based 501(C)(3) non-profit organization CIDR (being set up in Q1 2020), governed by a board of directors and advised by a an advisory board, all whose members serve 5 year terms. The president of the CIDR organization is Michael Stonebraker.
+<p>
 
-	<div id="contentwide">
-		<h2>Conference Organization</h2>
-		<p>
-                  <h3>General Chairs</h3>
-		<ul> 
-		<li>Anastasia Ailamaki, EPFL</li>
-				<li>Michael Stonebraker, MIT</li>
-		</ul>
-		<h3>Local Arrangement Chair</h3>
-		<ul> 
-		<li><b>Stefan Manegold</b> CWI</li>
-		</ul>
-		
-                 <h3>Program Committee Chairs</h3>
-		<ul> 
-		<li><b>Peter Boncz</b>, CWI</li>
-		<li><b>Jignesh Patel</b>, University of Wisconsin-Madison</li>
-		<li><b>Thomas Neumann</b>, TU Munich</li>
-		</ul> 
-		<p>
-		<h3>Gong Show Organizer</h3>
-		<ul> 
-		<li><b>Andy Pavlo</b>, CMU</li>
-		</ul> 	
-		
-		<h3>Website Chair</h3>
-		<ul> 
-		<li><b>Ziawasch Abedjan</b>, TU Berlin</li>
-		<br />
-                                 </ul> 
-		
-		
-		<h3>Program Committee</h3>
-		<ul>
-           <li><b> Gustavo Alonso</b>, ETH</li>
-<li><b>Sihem Amer-Yahia</b>, University of Grenoble</li>
-<li><b>Carsten Binnig</b>, TU Darmstadt</li>
-<li><b>Matthias Boehm</b>, TU Graz</li>
-<li><b>Philippe Bonnet</b>, IT Univ Copenhagen, Denmark</li>
-<li><b>Michael Cafarella</b>, University of Michigan</li>
-<li><b>Shimin Chen</b>, Chinese Academy of Sciences</li>
-<li><b>Brian Cooper</b>, Google</li>
-<li><b>Sudipto Das</b>, Microsoft Research</li>
-<li><b>Jens Dittrich</b>, Saarland University</li>
-<li><b>Aaron Elmore</b>, Chicago University </li>
-<li><b>Johannes Gehrke</b>, Microsoft</li>
-<li><b>Bingsheng He</b>, National University of Singapore</li>
-<li><b>H. V. Jagadish</b>, University of Michigan</li>
-<li><b>Chris Jermaine</b>, Rice University</li>
-<li><b>Alfons Kemper</b>, TUM</li>
-<li><b>Tim Kraska</b>, MIT</li>
-<li><b>Wolfgang Lehner</b>, TU Dresden</li>
-<li><b>Viktor Leis</b>, Friedrich Schiller University Jena</li>
-<li><b>Guoliang Li</b>, Tsinghua University</li>
-<li><b>David Lomet</b>, Microsoft Research</li>
-<li><b>Stefan Manegold</b>, CWI</li>
-<li><b>Ioana Manolescu</b>, INRIA</li>
-<li><b>Sergey Melnik</b>, Google</li>
-<li><b>Fatma Ozcan</b>, IBM Research - Almaden</li>
-<li><b>Ippokratis Pandis</b>, Amazon</li>
-<li><b>Olga Papaemmanouil</b>, Brandeis University</li>
-<li><b>Christopher Re</b>, Stanford University</li>
-<li><b>Jennie Rogers</b>, Northwestern University</li>
-<li><b>Eric Sedlar</b>, Oracle</li>
-<li><b>Jens Teubner</b>, TU Dortmund University</li>
-<li><b>Pinar Tozun</b>, ITU Copenhagen</li>
-<li><b>Peter Triantafillou</b>, University of Warwick</li>
-                                  
-                                  
-        </ul>
-	</div></div>
+
+For the period 2020-2025, we are grateful that the following sponsors are supporting CIDR in its mission to foment and publish database research with a systems architecture perspective:
+	
+<p>
+<a href="https://www.amazon.com">
+<img  height="130" id="amazon" src="img/amazon.jpg" ></a>
+
+<p>
+<a href="https://www.databricks.com">
+<img  height="130" id="databricks" src="img/databricks.png" ></a>
+
+<p>
+<a href="https://www.google.com">
+<img  height="130" id="google" src="img/google.png" ></a>
+
+<p>
+<a href="https://www.ibm.com" >
+<img  height="130" id="ibm" src="img/ibm.png" style="background-color:white;" ></a>
+
+<p>
+<a href="https://www.microsoft.com">
+<img  height="130" id="microsoft" src="img/microsoft.png" ></a>
+
+<p>
+<a href="https://www.oracle.com">
+<img  height="100" id="oracle" src="img/oracle.png" style="background-color:white;" ></a>
+
+<p>
+<a href="https://www.salesforce.com">
+<img  height="130" id="salesforce" src="img/salesforce.png" ></a>
+
+<p>
+<a href="https://www.snowflake.com">
+<img  height="130" id="snowflake" src="img/snowflake.png" ></a>
+	
+	
+	</div>
 
 	<div id="footer">
 		<p><span>&copy; 2012 <a href="org.html#">CIDR Conference</a></span><br />
