--- a/cidr2020/registration.html
+++ b/cidr2020/registration.html
@@ -111,6 +111,7 @@ table, th, td {
 			<ul class="avmenu">
 				<li><a href="index.html">Home</a></li>
 				<li><a href="cfp.html">Call For Papers</a></li>
+				<li><a href="officers.html">Officers</a></li>
 				<li><a href="org.html">Organization</a></li>
 				<li><a href="keynotespeakers.html">Keynotes</a></li>
 				<li><a href="program.html">Program</a></li>
