--- a/cidr2020/gongshow2020/gongshow.html
+++ b/cidr2020/gongshow2020/gongshow.html
@@ -93,8 +93,8 @@
     <td class="paper-info"><b><a href="gongshow/abstracts/cidr2020_abstract1.pdf">Cross-Blockchain Transactions</a></b><BR/>Tawose Olamide Timothy (<em>University of Nevada, Reno</em>)</td>
 </tr>
 <tr>
-    <td class="paper-url"><a href="gongshow/abstracts/cidr2020_abstract23.pdf" title="Automated Paraphrasing for Pure Natural Language Interaction with Databases"><img src="gongshow/img/paper23.png" /></a></td>
-    <td class="paper-info"><b><a href="gongshow/abstracts/cidr2020_abstract23.pdf">Automated Paraphrasing for Pure Natural Language Interaction with Databases</a></b><BR/>Christopher Baik (<em>University of Michigan</em>)</td>
+    <td class="paper-url"><a href="gongshow/abstracts/cidr2020_abstract23.pdf" title="Fragment-Driven Natural Language Interaction with Databases"><img src="gongshow/img/paper23.png" /></a></td>
+    <td class="paper-info"><b><a href="gongshow/abstracts/cidr2020_abstract23.pdf">Fragment-Driven Natural Language Interaction with Databases</a></b><BR/>Christopher Baik (<em>University of Michigan</em>)</td>
 </tr>
 <tr>
     <td class="paper-url"><a href="gongshow/abstracts/cidr2020_abstract36.pdf" title="Aiming at real applications: Subsequence Outlier Detection on Mixed-Type Attributes Data in RDBMS"><img src="gongshow/img/paper36.png" /></a></td>
