--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ CIDR
   none;border-bottom:solid windowtext .5pt;border-right:solid windowtext .5pt;
   mso-border-top-alt:solid windowtext .5pt;mso-border-left-alt:solid windowtext .5pt;
   padding:0in 5.4pt 0in 5.4pt'>
- <p class=MsoNormal><a href="cidr2020/cfp.html">Call for Papers</a></p></td>
+ <p class=MsoNormal><a href="cidr2020/cidr2020proceedings.zip">2020 Proceedings ( .zip)</a></p></td>
   <td width=148 valign=top style='width:2.05in;border-top:none;border-left:
   none;border-bottom:solid windowtext .5pt;border-right:solid windowtext .5pt;
   mso-border-top-alt:solid windowtext .5pt;mso-border-left-alt:solid windowtext .5pt;
