changed lunch location

--- a/cidr2020/program.html
+++ b/cidr2020/program.html
@@ -316,7 +316,7 @@ Santander Corporate & Commercial Banking) </a></span>
     <h3 class="time-slot" style="grid-row: time-1215;">12:15pm</h3>
     <div class="session session-4 track-all" style="grid-column: track-1; grid-row: time-1215 / time-1345;">
         <h3 class="session-title">Lunch</h3>
-        <span class="session-location">(Room: Atrium Foyer)</span>
+        <span class="session-location">(Room: Silk Road Restaurant)</span>
 
     </div>
     
@@ -455,7 +455,7 @@ Santander Corporate & Commercial Banking) </a></span>
     <h3 class="time-slot" style="grid-row: time-1215;">12:15pm</h3>
     <div class="session session-4 track-all" style="grid-column: track-1; grid-row: time-1215 / time-1650;">
         <h3 class="session-title">Lunch</h3>
-        <span class="session-location">(Room: Atrium Foyer)</span>
+        <span class="session-location">(Room: Silk Road Restaurant,)</span>
     </div> 
 
 </div>
