--- a/cidr2020/gongshow2020/gongshow.html
+++ b/cidr2020/gongshow2020/gongshow.html
@@ -89,16 +89,16 @@
 <table class="accepted">
 
 <tr>
+    <td class="paper-url"><a href="gongshow/abstracts/cidr2020_abstract36.pdf" title="Aiming at real applications: Subsequence Outlier Detection on Mixed-Type Attributes Data in RDBMS"><img src="gongshow/img/paper36.png" /></a></td>
+    <td class="paper-info"><b><a href="gongshow/abstracts/cidr2020_abstract36.pdf">Aiming at real applications: Subsequence Outlier Detection on Mixed-Type Attributes Data in RDBMS</a></b><BR/>Fan Meng (<em>Nanjing University</em>)</td>
+</tr>
+<tr>
     <td class="paper-url"><a href="gongshow/abstracts/cidr2020_abstract1.pdf" title="Cross-Blockchain Transactions"><img src="gongshow/img/paper1.png" /></a></td>
     <td class="paper-info"><b><a href="gongshow/abstracts/cidr2020_abstract1.pdf">Cross-Blockchain Transactions</a></b><BR/>Tawose Olamide Timothy (<em>University of Nevada, Reno</em>)</td>
 </tr>
 <tr>
     <td class="paper-url"><a href="gongshow/abstracts/cidr2020_abstract23.pdf" title="Fragment-Driven Natural Language Interaction with Databases"><img src="gongshow/img/paper23.png" /></a></td>
     <td class="paper-info"><b><a href="gongshow/abstracts/cidr2020_abstract23.pdf">Fragment-Driven Natural Language Interaction with Databases</a></b><BR/>Christopher Baik (<em>University of Michigan</em>)</td>
-</tr>
-<tr>
-    <td class="paper-url"><a href="gongshow/abstracts/cidr2020_abstract36.pdf" title="Aiming at real applications: Subsequence Outlier Detection on Mixed-Type Attributes Data in RDBMS"><img src="gongshow/img/paper36.png" /></a></td>
-    <td class="paper-info"><b><a href="gongshow/abstracts/cidr2020_abstract36.pdf">Aiming at real applications: Subsequence Outlier Detection on Mixed-Type Attributes Data in RDBMS</a></b><BR/>Fan Meng (<em>Nanjing University</em>)</td>
 </tr>
 <tr>
     <td class="paper-url"><a href="gongshow/abstracts/cidr2020_abstract42.pdf" title="A System for Studying Deep Network Training"><img src="gongshow/img/paper42.png" /></a></td>
@@ -121,8 +121,8 @@
     <td class="paper-info"><b><a href="gongshow/abstracts/cidr2020_abstract74.pdf">Pixels: Multiversion Wide Table Store for Data Lakes</a></b><BR/>Haoqiong Bian (<em>Unaffiliated</em>)</td>
 </tr>
 <tr>
-    <td class="paper-url"><img src="gongshow/img/missing.png" /></td>
-    <td class="paper-info"><b>When sweet and cute isn't enough anymore: Solving scalability issues in Python Pandas with Grizzly</b><BR/>Stefan Hagedorn (<em>TU Ilmenau</em>)</td>
+    <td class="paper-url"><a href="gongshow/abstracts/cidr2020_abstract76.pdf" title="When sweet and cute isn't enough anymore: Solving scalability issues in Python Pandas with Grizzly"><img src="gongshow/img/paper76.png" /></a></td>
+    <td class="paper-info"><b><a href="gongshow/abstracts/cidr2020_abstract76.pdf">When sweet and cute isn't enough anymore: Solving scalability issues in Python Pandas with Grizzly</a></b><BR/>Stefan Hagedorn (<em>TU Ilmenau</em>)</td>
 </tr>
 <tr>
     <td class="paper-url"><a href="gongshow/abstracts/cidr2020_abstract80.pdf" title="We do not have Systems for Analysing IoT Big-Data"><img src="gongshow/img/paper80.png" /></a></td>
