--- a/cidr2021/index.html
+++ b/cidr2021/index.html
@@ -2,8 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-	<meta name="description" content="The 8th biennial Conference on Innovative Data Systems Research (CIDR 2017)" />
-	<meta name="keywords" content="CIDR 2017, Asilomar Conference, Innovative Data Systems Research" />
+	<meta name="description" content="The 11th biennial Conference on Innovative Data Systems Research (CIDR 2021)" />
+	<meta name="keywords" content="CIDR 2021,  Conference on Innovative Data Systems Research" />
 	<meta name="author" content="Jena Bakula" />
 	<link rel="stylesheet" type="text/css" href="andreas01.css" media="screen,projection" />
 	<link rel="stylesheet" type="text/css" href="http://www.cidrdb.org/cidr2013/print.css" media="print" />
