--- a/cidr2021/index.html
+++ b/cidr2021/index.html
@@ -25,7 +25,7 @@ var theImages = new Array() // do not change this
 // pattern below, adding to the array.
 
 
-theImages[0] = 'img/CIDR_Amsterdam.jpg'
+theImages[0] = 'img/Property_Courtyard.jpg'
 
 // do not edit anything below this line
 
