added pc and updated cfp

--- a/cidr2021/cfp.html
+++ b/cidr2021/cfp.html
@@ -133,15 +133,20 @@ contributions
 <dl>
 
 	</br>
+	
+	<div style="background-color: #E6B0AA ; padding: 10px; border: 1px solid red;">
+
+	COVID-19: by fall 2020 CIDR will assess the situation; if the conference cannot be held physically in Chaminade (USA), it will become a virtual event.
+</div>
+</br>
 
 	<h3>Registration</h3>
 	<ul>
-<li>TBA</li>
-<!-- <li><strong>Before November 3, 2019</strong>: early
+ <li><strong>Before October 28, 2020</strong>: early
 	registration for authors of abstracts and submitted papers and demos.
-	<li><strong>After October 28, 2019</strong>:
+	<li><strong>After October 28, 2020</strong>:
 registration on first come first serve basis until capacity is reached.
--->
+
 </ul>
 	
 
@@ -150,18 +155,18 @@ registration on first come first serve basis until capacity is reached.
 <h3>Overview</h3>
 
 <p>
-	The annual Conference on Innovative Data Systems Research (CIDR) is a systems-oriented conference, complementary in its mission to the mainstream database conferences like SIGMOD and VLDB, emphasizing the systems architecture perspective. CIDR gathers researchers and practitioners from both academia and industry to discuss the latest innovative and visionary ideas in the field.
+The annual Conference on Innovative Data Systems Research (CIDR) is a systems-oriented conference, complementary in its mission to the mainstream database conferences like SIGMOD and VLDB, emphasizing the systems architecture perspective. CIDR gathers researchers and practitioners from both academia and industry to discuss the latest innovative and visionary ideas in the field.
 	<p>
 We invite contributions on novel approaches to data management systems, architecture, and usage. CIDR encourages contributions about innovative and risky data management system architecture ideas, systems-building experience and insight, resourceful experimental studies, and provocative position statements. CIDR especially values innovation, experience-based insight, and vision.
 
-<p>
-	This year, CIDR invites three kinds of contributions: (a) papers (at most 6 pages including references). We invite both regular research papers and more visionary papers that promote interesting ideas and ongoing work. To encourage authors to submit only their best work, each person can be an author or co-author of at most two submissions in total of kind a) and b). (b) demos (a video or a description of the demo in at most 6 pages). Authors who feel their work is best captured through a demo should submit a demo proposal. Demos and papers will be interweaved in a single-tracked program. (c) abstracts (at most 1 page). If you have an idea that is too half-baked for a paper or demo proposal, you may submit an abstract. Any author of a paper or demo may additionally submit one abstract. Abstracts are expected to have a single author. Abstracts will be allotted a shorter amount of presentation time than papers and demos, and historically these have been presented in an evening “gong show”.
-
-	<p>Abstracts, papers and demos will be reviewed by the
-program committee, who will select the final program in
-co-operation with the organizing committee.
 	<p>
-The number of participants at CIDR is limited to allow an intimate single-track experience. In the past, CIDR reached maximum capacity several weeks before the conference. As in the past, registration for the 2020 conference will be carried out in two phases. Authors who submitted an abstract or co-authored a paper or demo submission are invited to register before October 28th (independent of acceptance). After October 28th, registration is on a first-come-first-serve basis until the conference capacity is reached. So, if you plan to attend the conference, please, submit at least an abstract.
+	This year, CIDR invites three kinds of contributions: (a) papers (at most 6 pages). We invite both regular research papers and more visionary papers that promote interesting ideas and ongoing work. To encourage authors to submit only their best work, each person can be an author or co-author of at most two submissions in total of kind a) and b). (b) demos (a video or a description of the demo in at most 6 pages). Authors who feel their work is best captured through a demo should submit a demo proposal. Demos and papers will be interweaved in a single-tracked program. (c) abstracts (at most 1 page). If you have an idea that is too half-baked for a paper or demo proposal, you may submit an abstract. Any author of a paper or demo may additionally submit one abstract. Abstracts are expected to have a single author. Abstracts will be allotted a shorter amount of presentation time than papers and demos, and historically these have been presented in an evening â€œgong showâ€.
+
+	<p>
+	Abstracts, papers and demos will be reviewed by the program committee, who will select the final program in co-operation with the organizing committee.
+
+	<p>
+The number of participants at CIDR is limited to allow an intimate single-track experience. In the past, CIDR reached maximum capacity several weeks before the conference. As in the past, registration for the 2021 conference will be carried out in two phases. Authors who submitted an abstract or co-authored a paper or demo submission are invited to register before October 28th (independent of acceptance). After October 28th, registration is on a first-come-first-serve basis until the conference capacity is reached. So, if you plan to attend the conference, please, submit at least an abstract.
 
 <p>
 
@@ -175,7 +180,7 @@ format to <a
 href="https://cmt3.research.microsoft.com/CIDR2021">https://cmt3.research.microsoft.com/CIDR2021</a>.
 	</b>
 	<p>
-		Topics of interest include but are not limited to: database systems, storage management, transaction processing, cloud computing, massive data analysis, software service infrastructure, scalability and dependability, embedded and sensor databases, user interfaces, information integration and data cleaning architectures, information retrieval, declarative systems, data management in networks, benchmarking and experimental methodology, and databases for ML and ML for databases. We also welcome submissions on thought-provoking applications and emerging uses of data management technology.
+	Topics of interest include but are not limited to: database systems, storage management, transaction processing, cloud computing, massive data analysis, software service infrastructure, scalability and dependability, embedded and sensor databases, user interfaces, information integration and data cleaning architectures, information retrieval, declarative systems, data management in networks, benchmarking and experimental methodology, and databases for ML and ML for databases. We also welcome submissions on thought-provoking applications and emerging uses of data management technology.
 	<p> 
 		Submissions must be
 		formatted using the ACM SIG style. (see  <a
