--- a/cidr2021/officers.html
+++ b/cidr2021/officers.html
@@ -104,6 +104,44 @@
 		
 		<h3>Program Committee</h3>
 		<ul>
+		
+		<li><b>Azza Abouzied</b>, NYU Abu Dhabi</li>
+		<li><b>Peter Bailis</b>, Stanford University</li>
+<li><b>Carsten Binnig</b>, TU Darmstadt</li>
+<li><b>Matthias Boehm</b>, TU Graz</li>
+<li><b>Philippe Bonnet</b>, IT Univ Copenhagen, Denmark</li>
+<li><b>Ugur Cetintemel</b>, Brown Michigan</li>
+<li><b>Shimin Chen</b>, Chinese Academy of Sciences</li>
+<li><b>Jens Dittrich</b>, Saarland University</li>
+<li><b>Aaron Elmore</b>, Chicago University </li>
+<li><b>Umar Farooq Minhas</b>, Microsoft Research </li>
+<li><b>Johannes Gehrke</b>, Microsoft</li>
+<li><b>Jana Giceva</b>, TUM</li>
+<li><b>Bingsheng He</b>, National University of Singapore</li>
+<li><b>H. V. Jagadish</b>, University of Michigan</li>
+<li><b>Alfons Kemper</b>, TUM</li>
+<li><b>Donald Kossmann</b>, Microsoft Research</li>
+<li><b>Arun Kumar</b>, UC San Diego</li>
+<li><b>Wolfgang Lehner</b>, TU Dresden</li>
+<li><b>Viktor Leis</b>, Friedrich Schiller University Jena</li>
+<li><b>Guoliang Li</b>, Tsinghua University</li>
+<li><b>Feifei Li</b>, University of Utah</li>
+<li><b>Qiong Luo</b>, Hong Kong University of Science and Technology</li>
+<li><b>Sam Madden</b>, MIT</li>
+<li><b>Ioana Manolescu</b>, INRIA</li>
+<li><b>Hannes Mühleisen</b>, CWI</li>
+<li><b>Sergey Melnik</b>, Google</li>
+<li><b>Olga Papaemmanouil</b>, Brandeis University</li>
+<li><b>Aditya Parameswaran</b>, UC Berkeley</li>
+<li><b>Jennie Rogers</b>, Northwestern University</li>
+<li><b>Alkis Simitsis</b>, Hewlett Packard Enterprise</li>
+<li><b>Nesime Tatbul</b>, Intel Labs and MIT</li>
+<li><b>Jens Teubner</b>, TU Dortmund University</li>
+<li><b>Yuanyuan Tian</b>, IBM Almadan</li>
+<li><b>Pinar Tozun</b>, ITU Copenhagen</li>
+<li><b>Peter Triantafillou</b>, University of Warwick</li>
+<li><b>Kai Zeng</b>, Alibaba, China</li>
+<li><b>Daisy Zhe Wang</b>, University of Florida</li>
                                   
                                   
         </ul>
