added volker and gustavo to pc

--- a/cidr2021/officers.html
+++ b/cidr2021/officers.html
@@ -84,7 +84,7 @@
 		
                  <h3>Program Committee Chairs</h3>
 		<ul> 
-		<li><b>Peter Boncz</b>, CWI (lead)</li>
+		<li><b>Peter Boncz</b>, CWI </li>
 		<li><b>Fatma Ozcan</b>, IBM</li>
 		<li><b>Jignesh Patel</b>, University of Wisconsin-Madison</li>
 
@@ -106,6 +106,7 @@
 		<ul>
 		
 		<li><b>Azza Abouzied</b>, NYU Abu Dhabi</li>
+		<li><b>Gustavo Alonso</b>, ETH</li>
 		<li><b>Peter Bailis</b>, Stanford University</li>
 <li><b>Carsten Binnig</b>, TU Darmstadt</li>
 <li><b>Matthias Boehm</b>, TU Graz</li>
@@ -129,6 +130,7 @@
 <li><b>Qiong Luo</b>, Hong Kong University of Science and Technology</li>
 <li><b>Sam Madden</b>, MIT</li>
 <li><b>Ioana Manolescu</b>, INRIA</li>
+<li><b>Volker Markl</b>, TU Berlin</li>
 <li><b>Hannes Mühleisen</b>, CWI</li>
 <li><b>Sergey Melnik</b>, Google</li>
 <li><b>Olga Papaemmanouil</b>, Brandeis University</li>
