updated main page

--- a/index.html
+++ b/index.html
@@ -209,6 +209,23 @@ CIDR
   <p class=MsoNormal><b>Website<o:p></o:p></b></p>
   </td>
  </tr>
+ <tr>
+  <td width=148 valign=top style='width:2.05in;border:solid windowtext .5pt;
+  border-top:none;mso-border-top-alt:solid windowtext .5pt;padding:0in 5.4pt 0in 5.4pt'>
+  <p class=MsoNormal>2021</p>
+  </td>
+  <td width=148 valign=top style='width:2.05in;border-top:none;border-left:
+  none;border-bottom:solid windowtext .5pt;border-right:solid windowtext .5pt;
+  mso-border-top-alt:solid windowtext .5pt;mso-border-left-alt:solid windowtext .5pt;
+  padding:0in 5.4pt 0in 5.4pt'>
+ <p class=MsoNormal><a href="cidr2021/cfp.html">CfP</a></p></td>
+  <td width=148 valign=top style='width:2.05in;border-top:none;border-left:
+  none;border-bottom:solid windowtext .5pt;border-right:solid windowtext .5pt;
+  mso-border-top-alt:solid windowtext .5pt;mso-border-left-alt:solid windowtext .5pt;
+  padding:0in 5.4pt 0in 5.4pt'>
+  <p class=MsoNormal><a href="cidr2021/index.html">2021 website</a></p>
+  </td>
+ </tr>
   <tr>
   <td width=148 valign=top style='width:2.05in;border:solid windowtext .5pt;
   border-top:none;mso-border-top-alt:solid windowtext .5pt;padding:0in 5.4pt 0in 5.4pt'>
