--- a/cidr2021/cfp.html
+++ b/cidr2021/cfp.html
@@ -47,6 +47,8 @@ document.write('</div>');
 }
 
 
+
+
 </script>
 </head>
 
@@ -119,7 +121,9 @@ CIDR 2013</a></li>
 <b>(all deadlines are 11:59pm Pacific Time)</b>
 <dl>
 	<dt>
-<strong>August 24, 2020</strong>: Submission deadline for all
+	<div style="background-color: #E6B0AA ; padding: 10px; border: 1px solid red;">
+	Deadline extension upon multiple requests and in light of the continued difficult circumstances due to COVID-19</div>
+<strong> August </strong><del><span style="color:red;"> 24</span></del><strong> <ins>28</ins>, 2020</strong>: Submission deadline for all
 contributions
 	<dt>
 <strong>October 14, 2020</strong>: author notification for all contributions
