--- a/cidr2021/cfp.html
+++ b/cidr2021/cfp.html
@@ -140,7 +140,7 @@ contributions
 	
 	<div style="background-color: #E6B0AA ; padding: 10px; border: 1px solid red;">
 
-	COVID-19: by fall 2020 CIDR will assess the situation; if the conference cannot be held physically in Chaminade (USA), it will become a virtual event.
+	Due to the COVID-19 pandemic CIDR 2020 be a virtual event.
 </div>
 </br>
 
