--- a/cidr2021/index.html
+++ b/cidr2021/index.html
@@ -125,7 +125,7 @@ document.write('</div>');
 		  The Amsterdam venue of the conference is the Mövenpick hotel on the waterfront of the Amsterdam city center.
 		  <div style="background-color: #E6B0AA ; padding: 10px; border: 1px solid red;">
 
-	Due to the COVID-19 pandemic CIDR 2020 be a virtual event.
+	Due to the COVID-19 pandemic CIDR 2021 will be a virtual event.
 </div>
 <p>
 		  	<p>
