--- a/index.html
+++ b/index.html
@@ -181,8 +181,8 @@ CIDR
   <p class=MsoNormal>The first CIDR conference was first held at Asilomar in January 2003, and
   has been held every other January since then. 
   <span style="mso-spacerun:
-  yes">&nbsp;&nbsp; </span> <b> The conference will be held for a tenth time
-  January 12-15, 2020 in Amsterdam in Netherlands. </b> </p>
+  yes">&nbsp;&nbsp; </span> <b> The conference will be held for a eleventh time
+  January 10-13, 2021 virtually. </b> </p>
   <p class=MsoNormal><![if !supportEmptyParas]>&nbsp;<![endif]><o:p></o:p></p>
   </td>
  </tr>
