--- a/cidr2021/cfp.html
+++ b/cidr2021/cfp.html
@@ -60,7 +60,7 @@ document.write('</div>');
 <a href="index.html">CIDR 2021</a>
 	</h1>
 
-<p>January 10-13, 2021        <span style="padding-left:30px">  Chaminade CA, USA</span></p>
+<p>January 11-15, 2021        <span style="padding-left:30px">  Virtual Event</span></p>
 </div>
 
 <div id="leftside">
@@ -133,14 +133,14 @@ contributions
 	all contributions
 
 	<dt>
-<strong>January 10-13, 2021</strong>: conference
+<strong>January 11-15, 2021</strong>: conference
 <dl>
 
 	</br>
 	
 	<div style="background-color: #E6B0AA ; padding: 10px; border: 1px solid red;">
 
-	Due to the COVID-19 pandemic CIDR 2021 will be a virtual event.
+	Due to the COVID-19 pandemic, CIDR 2021 will be a virtual event.
 </div>
 </br>
 
