--- a/cidr2021/keynotespeakers.html
+++ b/cidr2021/keynotespeakers.html
@@ -15,7 +15,7 @@
 
 	<div id="header">
 		<h1><a href="index.html">CIDR 2021</a></h1>
-		<p>January 10-13 , 2021        <span style="padding-left:30px">  Chaminade CA, USA</span></p>
+		<p>January 11-15, 2021        <span style="padding-left:30px">  Virtual Event</span></p>
 	</div>
 
 	<div id="leftside">
