--- a/cidr2021/registration.html
+++ b/cidr2021/registration.html
@@ -115,8 +115,7 @@
 				<a href="index.html">CIDR 2021</a>
 			</h1>
 			<p>
-				January 10-13, 2021 <span style="padding-left: 30px">
-					Chaminade CA, USA</span>
+				January 11-15, 2021        <span style="padding-left:30px">  Virtual Event</span>
 			</p>
 		</div>
 
@@ -183,6 +182,11 @@
 					TBA
 				</ul>
 				<p>
+				<div style="background-color: #E6B0AA ; padding: 10px; border: 1px solid red;">
+
+	Due to the COVID-19 pandemic, CIDR 2021 will be a virtual event.
+</div>
+
 					CIDR 2021 will be held at <a href="http://www.chaminade.com">Chaminade
 						Resort & Spa</a>, a mountaintop hotel on 300 acres in Santa Cruz,
 					California. Chaminade is a 75 minute drive from San Francisco
