--- a/cidr2021/officers.html
+++ b/cidr2021/officers.html
@@ -85,7 +85,7 @@
                  <h3>Program Committee Chairs</h3>
 		<ul> 
 		<li><b>Peter Boncz</b>, CWI </li>
-		<li><b>Fatma Ozcan</b>, IBM</li>
+		<li><b>Fatma Ozcan</b>, Google</li>
 		<li><b>Jignesh Patel</b>, University of Wisconsin-Madison</li>
 
 		</ul> 
@@ -97,7 +97,7 @@
 		
 		<h3>Website Chair</h3>
 		<ul> 
-		<li><b>Ziawasch Abedjan</b>, TU Berlin</li>
+		<li><b>Ziawasch Abedjan</b>, Leibniz University Hannover</li>
 		<br />
                                  </ul> 
 		
