updated program and cfp

--- a/cidr2021/cfp.html
+++ b/cidr2021/cfp.html
@@ -146,10 +146,6 @@ contributions
 
 	<h3>Registration</h3>
 	<ul>
- <li><strong>Before October 28, 2020</strong>: early
-	registration for authors of abstracts and submitted papers and demos.
-	<li><strong>After October 28, 2020</strong>:
-registration on first come first serve basis until capacity is reached.
 
 </ul>
 	
@@ -170,8 +166,8 @@ We invite contributions on novel approaches to data management systems, architec
 	Abstracts, papers and demos will be reviewed by the program committee, who will select the final program in co-operation with the organizing committee.
 
 	<p>
-The number of participants at CIDR is limited to allow an intimate single-track experience. In the past, CIDR reached maximum capacity several weeks before the conference. As in the past, registration for the 2021 conference will be carried out in two phases. Authors who submitted an abstract or co-authored a paper or demo submission are invited to register before October 28th (independent of acceptance). After October 28th, registration is on a first-come-first-serve basis until the conference capacity is reached. So, if you plan to attend the conference, please, submit at least an abstract.
-
+<!-- The number of participants at CIDR is limited to allow an intimate single-track experience. In the past, CIDR reached maximum capacity several weeks before the conference. As in the past, registration for the 2021 conference will be carried out in two phases. Authors who submitted an abstract or co-authored a paper or demo submission are invited to register before October 28th (independent of acceptance). After October 28th, registration is on a first-come-first-serve basis until the conference capacity is reached. So, if you plan to attend the conference, please, submit at least an abstract.
+-->
 <p>
 
 
