keynote speakers / update sponsors

--- a/cidr2021/keynotespeakers.html
+++ b/cidr2021/keynotespeakers.html
@@ -65,6 +65,104 @@
 	  
           
 	 <h3>CIDR 2021 Keynote Speakers: TBA</h3>
+	 
+	 <h2 id='tuesday'><span style='font-family:"Calibri",sans-serif'>Tuesday Keynote: 9:00 am
+-10:00 am</span></h2>
+
+<p class=MsoNormal><span style='font-family:"Arial",sans-serif;color:black;
+border:none windowtext 1.0pt;padding:0in'><img width=129 height=129
+id="Picture 2" src="Keynote_speakers_content.fld/image001.jpg"></span></p>
+
+<p class=MsoNormal><span style='font-size:16.0pt;line-height:115%'>Benoit Dageville, Co-Founder &amp; President of
+Product</span></p>
+<p class=MsoNormal><span style='font-size:11.5pt;line-height:115%;color:#333333'>&nbsp;</span></p>
+
+
+<p class=MsoNormal style='margin-bottom:0in;line-height:normal'><b><span
+style='font-size:16.0pt'>Title:</span></b><span style='color:black'><br>
+TBA<br>
+<br>
+</span><b><span style='font-size:16.0pt;color:black'>Abstract:</span></b><span
+style='color:black'><br>
+TBA<br>
+<br>
+</span><b><span style='font-size:16.0pt;color:black'>Bio:</span></b><span
+style='color:black'><br>
+<br>
+</span></p>
+
+<p class=MsoNormal style='margin-bottom:0in;line-height:normal'><span
+style='color:black'>Benoit co-founded Snowflake and currently serves as
+President of the Product division. Benoit is a leading expert in parallel
+execution and self-tuning database systems. Prior to founding Snowflake, Benoit
+was with Oracle for over 10 years as a lead architect for parallel execution in
+Oracle RAC and a key architect in the SQL Manageability group. Prior to Oracle,
+Benoit worked at Bull Information Systems. He helped define the architecture
+and lead database performance efforts for Bull’s parallel systems. Benoit has a
+PhD in Computer Science with a focus in Parallel Database Systems and is a
+named inventor on more than 80 patents.</span></p>
+
+<p class=MsoNormal style='margin-bottom:0in;line-height:normal'>&nbsp;</p>
+
+<h2><span style='font-family:"Calibri",sans-serif'>&nbsp;</span></h2>
+
+<h2 id='thursday'><span style='font-family:"Calibri",sans-serif'>Thursday Keynote: 9:00 am
+-10:00 am                        </span></h2>
+
+<p class=MsoNormal><span style='font-size:12.0pt;line-height:115%;font-family:
+"Times New Roman",serif;color:black;border:none windowtext 1.0pt;padding:0in'><img
+width=127 height=127 id="Picture 1"
+src="Keynote_speakers_content.fld/image002.jpg"></span></p>
+
+<p class=MsoNormal><span style='font-size:16.0pt;line-height:115%'>Kunle
+Olukotun, Stanford University</span></p>
+
+<p class=MsoNormal><span style='font-size:11.5pt;line-height:115%;color:#333333'>&nbsp;</span></p>
+
+<p class=MsoNormal style='margin-bottom:0in'><b><span style='font-size:16.0pt;
+line-height:115%'>Title:</span></b></p>
+
+<p class=MsoNormal style='margin-bottom:0in'><span style='font-size:11.5pt;
+line-height:115%;color:#333333'>TBA</span></p>
+
+<p class=MsoNormal style='margin-bottom:0in'><b><span style='font-size:16.0pt;
+line-height:115%;color:black'>&nbsp;</span></b></p>
+
+<p class=MsoNormal style='margin-bottom:0in'><b><span style='font-size:16.0pt;
+line-height:115%;color:black'>Abstract:</span></b></p>
+
+<p class=MsoNormal><span style='font-size:11.5pt;line-height:115%;color:#333333'>TBA</span></p>
+
+<p class=MsoNormal style='margin-bottom:0in'><b><span style='font-size:16.0pt;
+line-height:115%;color:black'>Bio:</span></b></p>
+
+<p class=MsoNormal style='margin-bottom:0in;line-height:normal'><span
+style='color:black'>Biography: Kunle Olukotun is the Cadence Design Professor
+of Electrical Engineering and Computer Science at Stanford University. Olukotun
+is well known as a pioneer in multicore processor design and the leader of the
+Stanford Hydra chip multipocessor (CMP) research project. Olukotun founded
+Afara Websystems to develop high-throughput, low-power multicore processors for
+server systems. The Afara multicore processor, called Niagara, was acquired by
+Sun Microsystems. Niagara derived processors now power all Oracle SPARC-based
+servers. Olukotun currently directs the Stanford Pervasive Parallelism Lab
+(PPL), which seeks to proliferate the use of heterogeneous parallelism in all
+application areas using Domain Specific Languages (DSLs). Olukotun is a member
+of the Data Analytics for What’s Next (DAWN) Lab which is developing
+infrastructure for usable machine learning. Olukotun is a co-founder of
+SambaNova Systems. Olukotun is an ACM Fellow and IEEE Fellow for contributions
+to multiprocessors on a chip and multi-threaded processor design and is the
+recipient of the 2018 IEEE Harry H. Goode Memorial Award. Olukotun received his
+Ph.D. in Computer Engineering from The University of Michigan.</span></p>
+
+<p class=MsoNormal style='margin-bottom:0in;line-height:normal'><span
+style='font-size:12.0pt;font-family:"Times New Roman",serif'>&nbsp;</span></p>
+
+<p class=MsoNormal style='margin-bottom:0in;line-height:normal'><span
+style='font-size:12.0pt;font-family:"Times New Roman",serif'>&nbsp;</span></p>
+
+<p class=MsoNormal style='margin-bottom:0in'><span style='font-size:11.5pt;
+line-height:115%;color:#333333'>&nbsp;</span></p>
+
 
 
 </div>
