--- a/cidr2021/org.html
+++ b/cidr2021/org.html
@@ -90,8 +90,8 @@ For the period 2020-2025, we are grateful that the following sponsors are suppor
 <img  height="130" id="google" src="img/google.png" ></a>
 
 <p>
-<a href="https://www.ibm.com" >
-<img  height="130" id="ibm" src="img/ibm.png" style="background-color:white;" ></a>
+<a href="https://www.facebook.com" >
+<img  height="130" id="ibm" src="img/facebook.png" style="background-color:white;" ></a>
 
 <p>
 <a href="https://www.microsoft.com">
@@ -100,10 +100,6 @@ For the period 2020-2025, we are grateful that the following sponsors are suppor
 <p>
 <a href="https://www.oracle.com">
 <img  height="100" id="oracle" src="img/oracle.png" style="background-color:white;" ></a>
-
-<p>
-<a href="https://www.salesforce.com">
-<img  height="130" id="salesforce" src="img/salesforce.png" ></a>
 
 <p>
 <a href="https://www.snowflake.com">
