removed snowflake talk

--- a/cidr2021/program-tentative.html
+++ b/cidr2021/program-tentative.html
@@ -207,7 +207,7 @@
         <span class="session-time">9:00 - 10:00</span>
 		<span class="session-talk"><a class = "link" href="papers/p27-chen-cidr20.pdf">
 TBA</a></span>
-        <span class="keynote-presenter"><a class = "link" href="keynotespeakers.html#tuesday">Benoit Dageville, Co-Founder & President of Product</a></span>
+        <span class="keynote-presenter"><a class = "link" href="keynotespeakers.html#tuesday">TBA</a></span>
 
 
 
