--- a/cidr2021/registration.html
+++ b/cidr2021/registration.html
@@ -184,29 +184,25 @@
 				<p>
 				<div style="background-color: #E6B0AA ; padding: 10px; border: 1px solid red;">
 
-	Due to the COVID-19 pandemic, CIDR 2021 will be a virtual event.
+	Due to the COVID-19 pandemic, CIDR 2021 will be a virtual event via ZOOM. Details will follow.
 </div>
-<!--
-					CIDR 2021 will be held at <a href="http://www.chaminade.com">Chaminade
-						Resort & Spa</a>, a mountaintop hotel on 300 acres in Santa Cruz,
-					California. Chaminade is a 75 minute drive from San Francisco
-					airport and just 45 minutes from San Jose airport. Chaminade
-					features modern, spacious guest rooms in eleven villas nestled
-					among eucalyptus and redwood forests. The resort includes a fitness
-					center, pool, hot tub, spa services, hiking trails and tennis. The
-					conference center has sweeping views of Monterey Bay and the Santa
-					Cruz mountains. It is a relatively small resort so CIDR will occupy
-					most, if not all, of the space.
-				</p>
-				<div id="slideshow" position="center">
-					<img src="img/image1.jpg" alt="Slideshow Image 1" width="580"
-						height="300" class="active" /> <img src="img/image2.jpg"
-						alt="Slideshow Image 2" width="580" height="300" /> <img
-						src="img/image3.jpg" alt="Slideshow Image 3" width="580"
-						height="300" /> <img src="img/image4.jpg" alt="Slideshow Image 4"
-						width="580" height="300" />
-				</div>
-				-->
+
+
+
+Venue: Zoom
+<p>
+Due to the continuing pandemic, CIDR 20201 will be held online, via Zoom; in daily 3-hour single-track sessions. This will be a free event, thanks to the support received from the <a href="org.html">sponsors</a> of the CIDR organization.
+<p>
+Per CIDR tradition, talk presenters are the senior authors from the paper, though senior authors can request e-mail permission from the chairs for a junior author to speak, in which case senior authors must take responsibility for ensuring a high-quality talk. Please indicate which senior author is the speaker in your registration information.
+<p>
+Paper and presentation talk videos need to be submitted with the camera-ready through CMT in the mp4 format. Authors have been emailed about this. Regular (demo) paper videos should have a length of 10 minutes (max), and gong-show abstract videos 4 minutes. There will be 5 minutes Q&A after regular (demo) paper videos, for which we expect at least the author on video to be online in Zoom (with camera on) during the session of the talk video, as well as active in the concurrent chats. There will be no Q&A after gong show abstract talks. 
+<p>
+We recommend recording your talk with Zoom. Please use as your speaker background one of these images: <a href="img/cidr2021-background1.png">cidr2021-background2</a> and <a href="img/cidr2021-background2.png">cidr2021-background2</a>
+<p>
+Registration
+<p>
+Authors have received registration information by CMT email. General registration is capped to 500 participants. It will be opened on Friday December 18th.
+<p>
 
 				<h3>Registration Options</h3>
 
