--- a/cidr2021/org.html
+++ b/cidr2021/org.html
@@ -90,8 +90,8 @@ For the period 2020-2025, we are grateful that the following sponsors are suppor
 <img  height="130" id="google" src="img/google.png" ></a>
 
 <p>
-<a href="https://www.facebook.com" >
-<img  height="130" id="ibm" src="img/facebook.png" style="background-color:white;" ></a>
+<a href=" https://research.fb.com" >
+<img  height="130" id="facebook" src="img/facebook.png" style="background-color:white;" ></a>
 
 <p>
 <a href="https://www.microsoft.com">
