--- a/cidr2021/registration.html
+++ b/cidr2021/registration.html
@@ -168,7 +168,7 @@
 		</div>
 
 		<div id="contentwide">
-			<h2>Registration</h2>
+			<h2>Venue</h2>
 
 
 			<p>
@@ -177,10 +177,6 @@
                   <b> The conference is sold out. We can no longer accept registrations. </b> 
                  </h3>
                  -->
-
-				<ul>
-					TBA
-				</ul>
 				<p>
 				<div style="background-color: #E6B0AA ; padding: 10px; border: 1px solid red;">
 
@@ -199,16 +195,11 @@ Paper and presentation talk videos need to be submitted with the camera-ready th
 <p>
 We recommend recording your talk with Zoom. Please use as your speaker background one of these images: <a href="img/cidr2021-background1.png">cidr2021-background2</a> and <a href="img/cidr2021-background2.png">cidr2021-background2</a>
 <p>
-Registration
+<h3>Registration</h3>
 <p>
 Authors have received registration information by CMT email. General registration is capped to 500 participants. It will be opened on Friday December 18th.
 <p>
 
-				<h3>Registration Options</h3>
-
-				<ul>
-					<li>TBA</li>
-				</ul>
 			
 		</div>
 
