added registration form and updated UCB paper

--- a/cidr2021/program.html
+++ b/cidr2021/program.html
@@ -223,7 +223,7 @@ TBA</a></span>
         <span class="session-location">Zoom</span>
         <span class="session-time">7:00 - 7:15</span>
 		<span class="session-talk"><a class = "link" href="papers/p27-chen-cidr20.pdf">New Directions in Cloud Programming</a></span>
-        <span class="session-presenter">Alvin Cheung (University of California, Berkeley)*; Joseph M Hellerstein (UC Berkeley)</span>
+        <span class="session-presenter">Alvin Cheung (UC Berkeley), Natacha Crooks (UC Berkeley), Joseph M. Hellerstein (UC Berkeley), Matthew Milano (UC Berkeley)</span>
         
          <span class="session-time">7:15 - 7:30</span>
 		<span class="session-talk"><a class = "link" href="papers/p28-ungethuem-cidr20.pdf">The End of Data Warehouse</a></span>
