--- a/cidr2021/registration.html
+++ b/cidr2021/registration.html
@@ -168,24 +168,13 @@
 		</div>
 
 		<div id="contentwide">
-			<h2>Venue</h2>
+			<h2>Venue: Zoom</h2>
 
-
-			<p>
 				<!--
 		  <h3>
                   <b> The conference is sold out. We can no longer accept registrations. </b> 
                  </h3>
                  -->
-				<p>
-				<div style="background-color: #E6B0AA ; padding: 10px; border: 1px solid red;">
-
-	Due to the COVID-19 pandemic, CIDR 2021 will be a virtual event via ZOOM. Details will follow.
-</div>
-
-
-
-Venue: Zoom
 <p>
 Due to the continuing pandemic, CIDR 20201 will be held online, via Zoom; in daily 3-hour single-track sessions. This will be a free event, thanks to the support received from the <a href="org.html">sponsors</a> of the CIDR organization.
 <p>
@@ -197,10 +186,11 @@ We recommend recording your talk with Zoom. Please use as your speaker backgroun
 <p>
 <h3>Registration</h3>
 <p>
-Authors have received registration information by CMT email. General registration is capped to 500 participants. It will be opened on Friday December 18th.
+Authors have received registration information by CMT email. General registration is capped to 500 participants. 
 <p>
 
 			
+		<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeLwftTGsan8cGx6KcQtN9Jhpi4oZxN4iF7d7luh2BqOsWoHA/viewform?embedded=true" width="540" height="2103" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 		</div>
 
 		<div id="footer">
